...
                if (isSeller) ...[
                  const SizedBox(height: 12),
                  Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      buildActionButton(
                        label: 'Edit',
                        color: Colors.blue,
                        onPressed: () {
                          Navigator.of(context).push(
                            MaterialPageRoute(
                              builder:
                                  (context) =>
                                  EditPropertyPage(property: property),
                            ),
                          );
                        },
                      ),
                      buildActionButton(
                        label: 'Delete',
                        color: Colors.red,
                        onPressed: () {
                          ref
                              .read(propertyControllerProvider.notifier)
                              .deleteProperty(property.id!);
                          ref
...
