...
        style: FilledButton.styleFrom(
          backgroundColor: Colors.blue,
          foregroundColor: Colors.white,
          padding: const EdgeInsets.symmetric(vertical: 16),
        ),
        label: Text(
          "Login",
          style: const TextStyle(fontSize: 16, fontWeight: FontWeight.w600),
        ),
        icon:
            isLoading
                ? const CupertinoActivityIndicator(color: Colors.white)
                : const Icon(Icons.arrow_forward),
...
